# box_aabb

./: .gitignore  README.md  _fix_pipeline_goal_bias.py  _fix_pipeline_v2.py  bf  cpp_exp1_full.pid  safe_reboot_fix.sh  v3_refactoring_plan.md  v4_refactoring_plan.md
cpp/: .gitignore  CMakeLists.txt
cpp/examples/: CMakeLists.txt  benchmark_forest.cpp  plan_panda.cpp
cpp/experiments/: CMakeLists.txt  diag_aabb_timing.cpp  diag_anchor_aabb.cpp  diagnose_table.cpp  exp1_coverage.cpp  exp3_incremental.cpp
cpp/python/: CMakeLists.txt  bindings.cpp
cpp/src/aabb/: fk_scalar.cpp  interval_fk.cpp  interval_math.cpp
cpp/src/adapters/: ompl_adapter.cpp
cpp/src/core/: robot.cpp
cpp/src/forest/: coarsen.cpp  collision.cpp  hier_aabb_tree.cpp  node_store.cpp  safe_box_forest.cpp
cpp/src/planner/: graph_search.cpp  sbf_planner.cpp
cpp/tests/: CMakeLists.txt  test_collision.cpp  test_hcache.cpp  test_node_store.cpp  test_planner_e2e.cpp
cpp/v1/experiments/: diag_aabb_timing.cpp  diag_anchor_aabb.cpp  diag_per_pair.cpp  exp2_e2e_planning.cpp  marcucci_scenes.h
cpp/v1/python/: bindings.cpp  forest_viz.py
cpp/v1/tests/: test_collision.cpp  test_graph_search.cpp  test_hcache.cpp  test_interval_fk.cpp  test_interval_math.cpp  test_safe_box_forest.cpp
cpp/v2/doc/: HCACHE03_PLAN.md  _install_json.jl  _install_pkgs.jl  _test_pkg.jl  critical_sample_analysis.md  gcpc_math_analysis.tex
cpp/v2/docs/: API_REFERENCE.md  API_REFERENCE_zh.md  USER_GUIDE.md  USER_GUIDE_zh.md
cpp/v2/examples/: 01_basic_planning.py  02_scene_collision.py  03_incremental_planning.py  04_visualization.py  05_low_level_pipeline.py  06_multi_pair_cache.py  07_kinematics.py  08_forest_analysis.py  09_aabb_2dof_visualization.py  10_aabb_panda_visualization.py  11_obb_panda_visualization.py  12_obb_2dof_visualization.py
cpp/v2/experiments/: 13_benchmark_comparison.py  14_envelope_methods_benchmark.cpp  15_aabb_obb_critical_benchmark.cpp  16_verify_crit_frames.cpp  17_critical_hyperparameter_sweep.cpp  18_framestore_persistence.cpp  19_ablation_critical_opt.cpp  20_ablation_accel.cpp  21_grid_vs_aabb.cpp  21b_viz_export.cpp  22_analytical_critical.cpp  22_union_inflation.cpp  23_missed_extrema_analysis.cpp  24_extrema_config_analysis.cpp  25_aabb_grid_timing.cpp  25_improved_analytical.cpp  26_aabb_grid_timing.cpp  27_v1_phase_ablation.cpp  28_gcpc_validation.cpp
cpp/v2/python/: bindings.cpp  forest_viz.py
cpp/v2/scripts/: analyze_gcpc.jl  precompute_gcpc.jl  precompute_gcpc_v2.jl  run_gcpc.jl  test_hc.jl
cpp/v3/: AI_WORKING_SPEC.md  OPTIMIZATION_PROGRESS.md  README.md
cpp/v3/doc/: forest_grower_plan.md  phase5_optimization_plan.md
cpp/v3/docs/: API_REFERENCE.md  API_REFERENCE_CN.md  PAPER_CODE_MAP.md  Pipeline_Improvement_Plan.md  Voxel_Based_SBF_Architecture_Plan.md
cpp/v3/examples/: bench_nd_multiprocess.py  lect_demo.cpp  viz_2d_forest_grower.py  viz_2d_multiprocess.py  viz_compare_expansion.py  viz_demo.cpp  viz_wavefront_step.py
cpp/v3/experiments/: build_lect_cache.cpp  exp_aa_crossover_scan.cpp  exp_analytical_v3_baseline.cpp  exp_cache_bench.cpp  exp_certified_envelope.cpp  exp_coverage.cpp  exp_gcpc_validation.cpp  exp_hybrid_lect.cpp  exp_ia_vs_aa.cpp  exp_pipeline_benchmark.cpp  exp_v3v4_FFB.cpp  exp_v3v4_epiAABB.cpp  exp_v3v4_grower.cpp  exp_v3v4_linkIAABB.cpp  marcucci_scenes.h
cpp/v3/paper/: references.bib  root.tex  root_cn.tex
cpp/v3/python/: _check_comparison.py  _diag_comparison.py  bindings.cpp
cpp/v3/tests/: bench_pipeline_compare.cpp  bench_warm_pipeline.cpp  bench_warm_same_seeds.cpp  test_fk_workspace.cpp  test_forest_grower.cpp  test_lect_phase3.cpp  test_modular_pipeline.cpp  test_parallel_grower.cpp  test_phase10_coarsening.cpp  test_phase5_optimizations.cpp  test_phase6_kdtree_simd.cpp  test_phase7_warmstart.cpp  test_phase8_bridging.cpp  test_phase9_adaptive_min_edge.cpp  test_q0_symmetry.cpp  test_sbf.cpp
cpp/v4/_archive/: README.md
cpp/v4/doc/: AI_WORKING_SPEC.md  CHANGE_LOG_CN.md  OPTIMIZATION_PLAN_EPIAABB.md  PAPER_STAGE1_ENDPOINT_IAABB.md  PLAN_STATUS_SUMMARY_2026-03-27.md  PLAN_URDF_CAPSULE_FITTING.md  certified_verifier_plan.md  exp_ep_source_gap_plan.md  pipeline_improvement_analysis.md
cpp/v4/docs/: API_REFERENCE_CN.md  PAPER_CODE_MAP.md
cpp/v4/paper/: root.tex  (+1 more)
cpp/v5/: BRIDGE_OPTIMIZATION_PLAN.md  COARSEN_OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_OPA_E.md  README.md  _run_s3s4_isolated.py  _test_crash.py
cpp/v6/: GCS_IMPROVEMENT_PLAN.md  OPTIMIZATION_PLAN_V2.md  PHASE_DETAILS.md  PROGRESS_SUMMARY.md  REFACTORING_PLAN.md
v4/: __init__.py  _bootstrap.py  _check_lb_rb_dist.py  _run_full_quick.py  _test_iris_np.py  _test_quick_exp.py  check_point_in_region.py  get_nb_points.py  notebook_points.py  pyproject.toml  run_exp1.sh  setup_cython.py  test.hcache  test_gcs_addcost.py  use_chebyshev_centers.py
v4/doc/: algorithm.md  experiment_guide.md  generate_ppt.py  generate_scene_candidates.py  notation.md  viz_incremental_update.py  viz_interval_fk_aabb.py  viz_scene04_all.py  实验设计.md
v4/examples/: demo_panda.py  viz_2dof_full_pipeline.py
v4/experiments/: __init__.py  _run_quick_test.py  _run_smoke_test.py  exp1_main_comparison.py  exp2_forest_reuse.py  exp3_obstacle_change.py  exp5_ablation.py  exp7_scalability.py  exp8_aabb_tightness.py  gcs_utils.py  marcucci_scenes.py  paper_exp1_build.py  paper_exp1_e2e_gcs.py  paper_exp2_incremental.py  paper_exp2_planning.py  paper_exp3_coverage.py  paper_exp3_incremental.py  prepare_scenes.py  reporting.py  runner.py  scenes.py
v4/scripts/: _diag_bridge2.py  _sweep_connectivity.py  analyze_results.py  compare_v2_v3.py  exp1_hyperparam_sweep.py  exp2_method_comparison.py  generate_excel_report.py  run_all_experiments.py  run_panda_10obs.py  viz_panda_sbf.py
v4/tests/: conftest.py  perf_regression.py
v4/viz/: __init__.py  aabb_report.py  aabb_viz.py  check_iiwa_detail.py  compute_wsg_geometry.py  diagnose_collision.py  dynamic_visualizer.py  interactive_viewer.py  planner_viz.py  scene_viz.py  verify_collision_cause.py  viz_exp2_paths.py  viz_iris_bezier.py  viz_iris_paths.py  viz_ts_cs_path.py
(+892 files in other folders)
