[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "box-aabb-v4"
version = "0.1.0"
description = "SafeBoxForest (SBF) v4 project"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy", "matplotlib", "pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aabb*", "forest*", "planner*", "common*"]
